<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SibsutisApp</string>
    <string name="title_activity_navigation">navigation_activity</string>
    <string name="title_news">Новости</string>
    <string name="title_schedule">Расписание</string>
    <string name="title_attendance">Посещаемость</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="logo">Logo</string>
    <string name="name">Name</string>
    <string name="teacher">Teacher</string>
    <string name="date">date</string>
    <string name="classroom">classroom</string>
    <string name="typeoflesson">typeOfLesson</string>
    <string name="week_type">week_type</string>
    <string name="title_login" />
    <string name="teacher_name">ФИО преподавателя</string>
    <string name="pick_date">Выберите дату занятия</string>
    <string name="send">Отправить</string>
    <string name="send_teacher">Внести данные </string>
    <string name="search">search</string>
</resources>